tests/spec/compile-fail/036_vector_of_interface_access.zn
// category: compile-fail
// profile: freestanding
// purpose: bare interface access types cannot be stored in collections

module tests.fail.vectorOfInterfaceAccess;

import core.result.Result;

enum WriteError {
    Failed,
}

interface Writer {
    fn write(mut self, bytes: ArraySlice<U8>) -> Result<USize, WriteError>;
}

struct WriterList {
    writers: Vector<Writer>, // expected-error: bare interface access cannot be stored in Vector
}
